[package]
name = "ebus"
version = "0.2.6"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "*", optional = true }

[dev-dependencies]
env_logger = "*"

[features]
default = ["log"]

[profile.release]
codegen-units = 1
